--- a/Day2/Day2.html
+++ b/Day2/Day2.html
@@ -11,7 +11,7 @@
         /*
         Comment in Multiline: It is used when we want to write multiple lines of codes
         */
-       document.write("Hello World");
+       document.write("Hello JS!");
     </script>
 </body>
 </html>
