--- a/Day3/Day3.html
+++ b/Day3/Day3.html
@@ -8,9 +8,9 @@
 <body>
     <script>
         var a = 3;
-        document.write(a)
+        document.write(a) //print a
         var b; b = 5;
-        document.write(b);
+        document.write(b); //print b
     </script>
 </body>
 </html>
