--- a/Day6/day6.html
+++ b/Day6/day6.html
@@ -10,7 +10,9 @@
     function multiply(x,y){
         document.write(x * y);
     }
-    multiply(6,7);
+    multiply(6,7);//the output is 42
+
+    alert(new Date()); //alert today's date
      </script>
 </body>
 </html>
