--- a/Day1/Day1.html
+++ b/Day1/Day1.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <script>
-        document.write("Hello World");
-        document.write(5+6);
+        document.write("Hello World \n"); //prints hello world
+        document.write(5+6); // sum up 5+6
     </script>
 </body>
 </html>
