--- a/Day4&5/Day4&5.html
+++ b/Day4&5/Day4&5.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <script>
+        //outputing some texts on the web
         document.write("Hello, this is my first challenge and I will do it 10 times.<br> I will do it, I will learn JS.")
     </script>
 </body>
