--- a/Day53&54/index.html
+++ b/Day53&54/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JSDay53&54</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<table border="1">
-  <tr>
-    <th>Employee</th>
-    <th>Job role</th>
-    <th>Experience</th>
-  </tr>
-<!-- partial -->
-  <script  src="./weekend.js"></script>
+  <table border="1">
+    <tr>
+      <th>id</th>
+      <th>Employee</th>
+      <th>Job role</th>
+      <th>Experience</th>
+    </tr>
+
+    <script src="script.js"></script>
 
 </body>
+
 </html>
