--- a/Day71/index.htm
+++ b/Day71/index.htm
@@ -7,16 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button onclick="stopColor()">stop Toggling</button>
-    <script>
-        var myVar = setInterval(setColor, 300);
-        function setColor(){
-            var x = document.body;
-            x.style.backgroundColor = x.style.backgroundColor == "lightpink" ? "lightgray" : "lightpink";
-        }
-        function stopColor(){
-            clearInterval(myVar);
-        }
-    </script>
+    <button onclick="stopColor()">stop Toggling</button><br><br>
+    <button onclick="conTog()">Continue Toggling</button>
+<script src="script.js"></script>
 </body>
 </html>
