--- a/Day74&75/index.html
+++ b/Day74&75/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Day 74&75</title>
+	<title>Dialog box</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
